<resources>
    <string name="name">Name</string>
    <string name="user_id_optional">User ID (Optional)</string>
    <string name="user_id_required">User ID</string>
    <string name="fetch">Fetch</string>
    <string name="local_enroll">Local enroll</string>
    <string name="server_enroll">Server side enroll</string>
    <string name="local_auth">Local auth</string>
    <string name="server_auth">Server side auth</string>
    <string name="enroll_first">Please enroll first</string>
    <string name="error_msg_empty_fields">Please enter user information</string>
    <string name="enroll_completed">Account successfully created!</string>
    <string name="enroll_cancelled">Couldn\'t complete enrollment</string>
    <string name="auth_verified">Verified %1$s</string>
    <string name="auth_not_verified">Not verified. Recent false attempts: %d</string>
    <string name="auth_aborted">Authentication aborted. Recent false attempts: %d</string>
    <string name="auth_failed">Liveness check failed. Recent false attempts: %d</string>
    <string name="auth_canceled">Couldn\'t complete authentication</string>
    <string name="msg_fetching_succeed">User features fetched</string>
    <string name="msg_fetching_failed">Failed to fetch user features</string>
    <string name="fetch_info">Enter the user ID, tap the FETCH button, and features and data associated with the user ID will be downloaded from the server. Once downloaded successfully, tapping the name on the main screen will start user authentication on the device.</string>
    <string name="enroll_info">Enter information to enroll a new user. Element SDK will assign a user ID if the User ID field is blank. Enrollment will run on the device or server per the settings.</string>
    <string name="processing">Processing…</string>
    <string name="capture_failed">Please position your face inside the outline and follow the instructions</string>
    <string name="retry">Try Again</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <string name="query_api_url">api/ers/register</string>
    <string name="face_auth_url">api/ers/matching</string>
    <string name="face_enroll_url">api/ers/enroll</string>
</resources>
